# chatbot-assistant

./: .gitignore  README.md  compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/bot/: __init__.py  helpers.py
backend/src/bot/templates/: IDENTITY.md  SOUL.md  USER.md
backend/src/bot/tools/: filesystem.py  web.py
backend/src/core/: runners.py  sessions.py  tools.py
backend/src/core/agents/: __init__.py  base.py  echo.py  ollama.py
backend/src/core/types/: __init__.py  chat.py  message.py  message_content.py
backend/src/routers/: v1.py
